Remove pagination, update spec to handle playlist data
